# prompthub-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
prompthub/: __init__.py  prompt.py
prompthub_py/: prompt.py
test/: conftest.py  test_prompt.py
test/fake_prompts/: fake_prompt.json  fake_prompt.yml  fake_prompt_sorted.yml
