[tool.poetry]
name = "prompthub-py"
version = "0.1.0"
description = ""
authors = ["deepset.ai"]
readme = "README.md"
packages = [{ include = "prompthub_py" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
