[tool.poetry]
name = "prompthub-py"
version = "0.3.0"
description = ""
authors = ["deepset.ai"]
readme = "README.md"
packages = [{ include = "prompthub_py" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
